# teams_automation

./: .gitignore  LICENSE  README.md  pyproject.toml  teams_test.py
src/teams_automation/: __init__.py  client.py
tests/: test3.py
